Ok finished revisions

--- a/FCC.html
+++ b/FCC.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png">
+    <a href="index.html">
+        <img src="images/logo.png" class="response">
+    </a>   
       <ul>
         <li>ABOUT</li>
         <li>SKILLS</li>
