--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png">
+      <img src="images/logo.png" class="response">
       <ul>
         <li>ABOUT</li>
         <li>SKILLS</li>
