--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1 class="heading">My Work</h1>
       <div class="workGrid">
         <div class="img1">
-          <img src="images\Fit Match Case Study.png" class="responsive">
+          <img src="images\Fit Match Case Study.png" class="responses">
         </div>
         <div class="content1">
           <h4>Fit Match</h4>
@@ -58,7 +58,7 @@
           <button>View Project</button>
         </div>
         <div class="img2">
-          <img src="images\PAWS Redesign Case Study.png" class="responsive">
+          <img src="images\PAWS Redesign Case Study.png" class="responses">
         </div>
         <div class="content2">
           <h4>PAWS Redesign</h4>
@@ -66,7 +66,7 @@
           <button>View Project</button>
         </div>
         <div class="img3">
-          <img src="images/FCC Redesign Case Study.png" class="responsive">
+          <img src="images/FCC Redesign Case Study.png" class="responses">
         </div>
         <div class="content3">
           <h4>FCC Redesign</h4>
